--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     
     <!-- Link JS -->
-    <script src="js\script.js"></script>
+    <script src="./assets/js/script.js"></script>
     <!-- Materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
