--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container center" id="intro-box">
         <div class="card">
           <div class="card-content">
-            <h1>
+            <h1 id="quiz-title">
               CODE QUIZ
             </h1>
             <p id="p-intro">
